@@ -579,6 +579,92 @@ _wrap_g_file_copy(PyGObject *self,
     return PyBool_FromLong(ret);
 }
 %%
+override g_file_copy_async kwargs
+static PyObject *
+_wrap_g_file_copy_async(PyGObject *self,
+			PyObject *args,
+			PyObject *kwargs)
+{
+  static char *kwlist[] = { "destination", "callback", "flags", "io_priority",
+			    "user_data", "cancellable", "progress_callback", 
+                            "progress_callback_data", NULL };
+  PyGIONotify *notify, *progress_callback;
+  PyObject *py_flags = NULL;
+  PyGObject *destination = NULL;
+  PyGObject *py_cancellable = NULL;
+  GFileCopyFlags flags = G_FILE_COPY_NONE;
+  int io_priority = G_PRIORITY_DEFAULT;
+  PyGObject *pycancellable = NULL;
+  GCancellable *cancellable;
+  GFileProgressCallback callback = NULL;
+
+  notify = g_slice_new0(PyGIONotify);
+  progress_callback = g_slice_new0(PyGIONotify);
+
+  if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+                                   "O!O|OiOOOO:File.copy_async",
+                                   kwlist,
+				   &PyGFile_Type,
+				   &destination,
+                                   &notify->callback,
+				   &py_flags,
+                                   &io_priority,
+                                   &notify->data,
+                                   &pycancellable,
+                                   &progress_callback->callback,
+                                   &progress_callback->data
+                                   ))
+    {
+      g_slice_free(PyGIONotify, notify);
+      g_slice_free(PyGIONotify, progress_callback);
+      return NULL;
+    }
+
+  if (!pygio_check_cancellable(py_cancellable, &cancellable))
+      return NULL;
+  if (progress_callback->callback != NULL)
+    {
+	if (!PyCallable_Check(progress_callback->callback))
+	{
+	    PyErr_SetString(PyExc_TypeError, "progress_callback argument not callable");
+	    g_slice_free(PyGIONotify, notify);
+            g_slice_free(PyGIONotify, progress_callback);
+	    return NULL;
+	}
+	callback = (GFileProgressCallback)file_progress_callback_marshal;
+	Py_INCREF(progress_callback->callback);
+        Py_XINCREF(progress_callback->data);
+    }
+  if (!PyCallable_Check(notify->callback))
+    {
+      PyErr_SetString(PyExc_TypeError, "callback argument not callable");
+      Py_DECREF(progress_callback->callback);
+      Py_XDECREF(progress_callback->data);
+      g_slice_free(PyGIONotify, notify);
+      g_slice_free(PyGIONotify, progress_callback);
+      return NULL;
+    }
+  Py_INCREF(notify->callback);
+  Py_XINCREF(notify->data);
+
+
+  if (!pygio_check_cancellable(pycancellable, &cancellable))
+      return NULL;
+
+  g_file_copy_async(G_FILE(self->obj),
+                    G_FILE(destination->obj),
+                    flags,
+                    io_priority,
+                    cancellable,
+                    callback,
+                    progress_callback,
+                    (GAsyncReadyCallback)async_result_callback_marshal,
+                    notify);
+
+  Py_INCREF(Py_None);
+  return Py_None;
+}
+%%
 override g_file_move kwargs
 static PyObject *
 _wrap_g_file_move(PyGObject *self,
